--- a/Gitit.html
+++ b/Gitit.html
@@ -17,6 +17,13 @@
         </p>
         <br>
         <img src="album.jpg">
+        <p class="iie"> 
+            it is easy
+        </p>
+        <br>
+        <p class="bfm">
+            Bihes Ft.Melika
+        </p>
     </div>
 </body>
 </html>
