--- a/Gitit.html
+++ b/Gitit.html
@@ -24,6 +24,26 @@
         <p class="bfm">
             Bihes Ft.Melika
         </p>
+        <ul>
+            <li class="ss">
+                00:00
+            </li>
+            <li class="ee">
+                03:24
+            </li>
+        </ul>
+        <input type="range">
+        <ul>
+            <li class="bb">
+                <button class="back fas fa-backward"></button>
+            </li>
+            <li class="pp">
+                <button class="play fas fa-play"></button>
+            </li>
+            <li class="ff">
+                <button class="for fas fa-forward"></button>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
